# RustGDK

./: .gitignore  Cargo.toml  README.md  bindings.rs
c_sdk/: target.spatialos_worker_packages.json.md5
c_sdk/include/improbable/: c_schema.h  c_worker.h
codegen/: codegen.js  codegen.sh
codegen/templates/: command.rs  component.rs  component_file_header.rs  general_mod.rs  type.rs
demo-project/: .gitignore  README.md  convert_snapshot.sh  default_launch.json  spatialos.json
demo-project/schema/: README.md
demo-project/schema/demogame/: Movement.schema
demo-project/snapshot/: Cargo.toml
demo-project/snapshot/src/: build.rs  main.rs
demo-project/snapshots/: default.snapshot  default.txt
demo-project/workers/demo-game/: Cargo.toml
demo-project/workers/server/: Cargo.toml  spatialos.rust.build.json  spatialos.server.worker.json
demo-project/workers/server/src/: main.rs
spatialos-gdk/: Cargo.toml
spatialos-gdk-codegen/: Cargo.toml
spatialos-gdk-codegen/src/: component.rs  event.rs  global.rs  lib.rs  user_type.rs
spatialos-gdk/spatialos-gdk-codegen/src/: command.rs  component.rs  field.rs  global.rs  json.rs  lib.rs  schema_type.rs  (+1 more)
spatialos-gdk/spatialos-gdk-derive/: Cargo.toml
spatialos-gdk/src/: build.rs  chunk.rs  commands.rs  component_group.rs  entity.rs  entity_collection.rs  entity_template.rs  lib.rs  shared_resources.rs  snapshot.rs  system.rs  world.rs
src/: build.rs  main.rs
src/ecs/: mod.rs
src/schema/: mod.rs  standard_library.rs
src/worker/: component.rs  connection.rs  dispatcher.rs  entity.rs  ffi.rs  mod.rs  view.rs
(+10 files in other folders)
