[package]
name = "server"
version = "0.1.0"
authors = ["sam <samsnyder96@gmail.com>"]

build = "src/build.rs"

[dependencies]
rand = "0.4.2"
spatialos-gdk = { path = "../../../spatialos-gdk" }
spatialos-gdk-derive = { path = "../../../spatialos-gdk/spatialos-gdk-derive" }

[build-dependencies]
spatialos-gdk-codegen = { path = "../../../spatialos/spatialos-gdk-codegen" }